--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.5.7",
@@ -25,8 +26,10 @@
     "react-native": "0.70.5",
     "react-native-countdown-component": "^2.7.1",
     "react-native-elements": "^3.4.3",
+    "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-pager-view": "6.0.1",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
